<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/redBg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="412dp"
            android:layout_height="291dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ping_pong_download_png"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/settings_button"
            style="@style/buttonStyle"
            android:layout_width="176dp"
            android:layout_height="83dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#C81E4C8F"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_game_button" />

        <Button
            android:id="@+id/new_game_button"
            style="@style/buttonStyle"
            android:layout_width="176dp"
            android:layout_height="83dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/new_game"
            app:layout_constraintBottom_toTopOf="@+id/settings_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>